fixed slider slick overflow

--- a/assets/components/js-libs/slider/slider.scss
+++ b/assets/components/js-libs/slider/slider.scss
@@ -97,3 +97,7 @@
 .slick-track {
   overflow: hidden;
 }
+
+.slick-list.draggable {
+  overflow: hidden;
+}
